Bug 1979803 - Separate `--border-color` into brand and platform and improve its contrast. r=jules,reusable-components-reviewers,desktop-theme-reviewers,dao
Changed
* `--border-color` to color/gray/70 on dark, and currentColor in platform

Differential Revision: https://phabricator.services.mozilla.com/D259291

--- a/toolkit/themes/shared/design-system/tokens-shared.css
+++ b/toolkit/themes/shared/design-system/tokens-shared.css
@@ -18,7 +18,6 @@
     --background-color-warning: light-dark(var(--color-yellow-0), var(--color-yellow-90));
 
     /** Border **/
-    --border-color: light-dark(var(--color-gray-50), #3a3944);
     --border-color-card: color-mix(in srgb, currentColor 10%, transparent);
     --border-color-interactive-hover: var(--border-color-interactive);
     --border-color-interactive-active: var(--border-color-interactive);
